@@ -1,5 +1,16 @@
 2005-01-23  Jorn Baayen  <jbaayen@gnome.org>
 
+	* TODO:
+	* src/AddAlbumWindow.cs:
+	* src/HandleView.cs:
+	* src/PlaylistWindow.cs:
+
+	Add some spacing between cell renderers, and work around
+	a bug in GtkTreeView fixed-height-mode, namely
+	http://bugzilla.gnome.org/show_bug.cgi?id=165017
+
+2005-01-23  Jorn Baayen  <jbaayen@gnome.org>
+
 	* data/muine.schemas.in:
 	* src/Album.cs:
 	* src/SongDatabase.cs:
